Fix WindowTreeClient::RequestClose(window_id).

In the new client-lib, non-root windows can also be closed using
WindowTreeClient::RequestClose.
If the window is the root window, we send close request to the entire
WindowTreeHost. Otherwise we ask the delegate of the window to close it.
We are not adding a delegate to the root window because functions
like Window::GetToplevelWindow() would fail.

BUG=676091
TEST=aura_unittests

Review-Url: https://codereview.chromium.org/2604453002
Cr-Commit-Position: refs/heads/master@{#441557}

Former-commit-id: 655b0a08086da3328bee25e73070fcd30f7e5e9e